manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ry-ta2647-next-project01-deployment
  labels:
    app: ry-ta2647-next-project01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ry-ta2647-next-project01
  template:
    metadata:
      labels:
        app: ry-ta2647-next-project01
    spec:
      containers:
        - name: ry-ta2647-next-project01-container
          image: pipejet/ry-ta2647-next-project01:0
          ports:
            - containerPort: 3000
