manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ry-ta2647-next-project01-service
spec:
  type: NodePort
  selector:
    app: ry-ta2647-next-project01
  ports:
    - protocol: TCP
      port: 8232
      targetPort: 3000
