manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ry-ta2647-next-project01-https-ingress
  namespace: ry-ta2647-next-project01
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ry-ta2647-next-project01.assessify.org
      secretName: ry-ta2647-next-project01-secret-tls
  rules:
    - host: ry-ta2647-next-project01.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ry-ta2647-next-project01-service
                port:
                  number: 8232
